Added arguments convention, fixed static aspects.

--- a/TestTargetApp/TestTargetApp.csproj
+++ b/TestTargetApp/TestTargetApp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="LoggingAspectAttribute.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticLogginAspectAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
