--- a/Reweave.Core/Reweave.Core.csproj
+++ b/Reweave.Core/Reweave.Core.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Exceptions\ArgumentTypeMismatchException.cs" />
     <Compile Include="ILProcessorExtensions.cs" />
     <Compile Include="LinqExtensions.cs" />
+    <Compile Include="MethodRefExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
